# cognisyn-cli

./: Cargo.toml
src/: main.rs
