[package]
name = "cognisyn-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.105"
